[project]
name = "message-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "openpyxl>=3.1.5",
    "requests>=2.32.5",
    "streamlit>=1.52.1",
]

[project.optional-dependencies]
data = [
    "pandas>=2.0",
    "openpyxl>=3.1",
]
